--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <header>
       <!-- Primary navigation -->
       <nav class="header-nav ">
-        <img class="icon" src="./assets/images/icono-1.png" alt="Mercedes Benz Icon"> <!--TODO: improve alt-->
-        <ul>
+        <img class="logo icon" src="./assets/images/icon-mercedes.svg" alt="Mercedes Benz Icon"> <!--TODO: improve alt-->
+        <ul class="toggle-navbar">
           <li><a class="nav-link" href="#">Electric</a></li>
           <li><a class="nav-link" href="#">Maybach</a></li>
           <li><a class="nav-link" href="#">Accessories</a></li>
@@ -58,9 +58,51 @@
       <!-- ===== Car Gallery Section ===== -->
       <section class="car-gallery">
         <article class="card-container"> <!--TODO: Check if the card-container can be really reused in the features section-->
-          <h3>Electric</h3>
+          <h3 class="card-title">Electric</h3>
           <p>Mercedes E450 Cabriolet</p>
           <img src="./assets/images/2023-E450-Cabriolet.png" alt="2023 E450 Mercedes Cabriolet"><!--TODO: FIx alt-->
+          <div class="car-gal-container">
+            <a class="link-button" href="#">More Info</a>
+            <div class="color-container">
+              <div class="color-circle gray"></div>
+              <div class="color-circle red"></div>
+              <div class="color-circle blue"></div>
+              <div class="color-circle black"></div>
+            </div>
+          </div>
+        </article>
+        <article class="card-container"> <!--TODO: Check if the card-container can be really reused in the features section-->
+          <h3 class="card-title">Hybrid</h3>
+          <p>Mercedes GLC SUV</p>
+          <img src="./assets/images/glc-suv-gasoline.png" alt="GSL SUV Gasoline"><!--TODO: FIx alt-->
+          <div class="car-gal-container">
+            <a class="link-button" href="#">More Info</a>
+            <div class="color-container">
+              <div class="color-circle gray"></div>
+              <div class="color-circle red"></div>
+              <div class="color-circle blue"></div>
+              <div class="color-circle black"></div>
+            </div>
+          </div>
+        </article>
+                <article class="card-container"> <!--TODO: Check if the card-container can be really reused in the features section-->
+          <h3 class="card-title">Hybrid</h3>
+          <p>Merces Benz-G-Class</p>
+          <img src="./assets/images/mercedes-benz-g-class.png" alt="Mercedes Benz G Class"><!--TODO: FIx alt-->
+          <div class="car-gal-container">
+            <a class="link-button" href="#">More Info</a>
+            <div class="color-container">
+              <div class="color-circle gray"></div>
+              <div class="color-circle red"></div>
+              <div class="color-circle blue"></div>
+              <div class="color-circle black"></div>
+            </div>
+          </div>
+        </article>
+                <article class="card-container"> <!--TODO: Check if the card-container can be really reused in the features section-->
+          <h3 class="card-title">Electric</h3>
+          <p>Mercedes GLC SUV </p>
+          <img src="./assets/images/fourth-car.png" alt="Fourth Car"><!--TODO: FIx alt, Check what car is it and correct the text and img name-->
           <div class="car-gal-container">
             <a class="link-button" href="#">More Info</a>
             <div class="color-container">
@@ -93,6 +135,7 @@
           <img src="./assets/images/2021-mercedes-eqs-interior.jpg" alt="mercedes-eqs-interior"><!--TODO: improve alt-->
           <a class="link-button" href="#">More Info</a>
         </article>
+        
       </section>
 
       <!-- ===== Maybach Red ===== -->
@@ -112,7 +155,7 @@
         <div class="container">
           <h2>The Mercedes-Maybach wheel programme</h2>
           <p>The exclusive Mercedes-Maybach wheel programme, e.g. with optional 53.3 cm (21") Maybach forged wheels in multi-spoke design.</p>
-          <a class="link-button" href="#">Learn More Info</a>
+          <a class="link-button" href="#">Learn More</a>
         </div>
         <img src="./assets/images/maybach-wheels.png" alt="Close-up to the Maybach Wheels"><!--TODO: Fix alt-->
       </section>
